force-app/main/default/objects/Book__c/fields/Book_address__c.field-meta.xml
<CustomField>
    <fullName>Book_address__c</fullName>
    <label>Book Address</label>
    <type>Address</type>
</CustomField>