force-app/main/default/objects/Book__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>A status of this thing</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
            <value>
                <fullName>KindaNew</fullName>
                <label>Kinda new</label>
            </value>
            <value>
                <fullName>VeryOld</fullName>
                <label>Very old</label>
            </value>
            <value>
                <fullName>very very new</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>