force-app/main/default/objects/Book__c/validationRules/Rating_Must_Be_1_to_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Must_Be_1_to_5</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Rating__c &lt; 1, Rating__c &gt; 5)</errorConditionFormula>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>